@@ -9,9 +9,11 @@
 #include "mpg123app.h"
 
 /* Load the settings from the path in the global variable equalfile.
-   If there is no file, restore equalizer defaults. */
+   If there is no file, restore equalizer defaults. 
+   If NO_EQUALIZER is defined, it does nothing else that return zero */
 int load_equalizer(mpg123_handle *mh)
 {
+#ifndef NO_EQUALIZER
 	if(equalfile != NULL)
 	{ /* tst; ThOr: not TRUE or FALSE: allocated or not... */
 		FILE *fe;
@@ -43,6 +45,6 @@ int load_equalizer(mpg123_handle *mh)
 		}
 	}
 	else mpg123_reset_eq(mh);
-
+#endif
 	return 0;
 }
